package controllers;

public enum StateValue {
    START,
    USER_PROPOSE,
    FINAL,
    EXIT;
}
