@startuml
package "main" {
class Hanged
}

package "views"{
abstract class View
    package "console" {
        class ConsoleView
        class StartView
        class ProposeView
        class ResumeView
    }
}

package "controllers"{
abstract class Controller
class StartController
class ProposeController
class RestartController
interface ControllerVisitor

}


package "models" {
class Logic
class Secret
class Word
enum HangedPart
class Turn
class Player
class Game
class State
enum StateValue
}


package "utils"{
class ConsoleView
class YesNoDialog
}


package "types"{
enum HangedParts
enum MessageView
}


Logic *--> Game

Hanged *--> View
Hanged *--> Logic
Hanged --> Controller

View <|-- ConsoleView
ConsoleView *--> StartView
ConsoleView *--> ProposeView
ConsoleView *--> ResumeView

Controller <|-- StartController
Controller <|-- ProposeController
Controller <|-- RestartController


Logic *--> Turn
Game o--> State
State o--> StateValue

Turn *--> Player
Player --> HangedPart

Game --> Secret

Secret --> Word



@enduml